--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -9,3 +9,11 @@ MYSQL_DB: spcloud-db
 #SERVER
 SERVER_PORT: 8081
 ACTIVE_PROFILE: dev
+
+#EMAIL CONFIG
+EMAIL_HOST: smtp.gmail.com
+EMAIL_PROTOCOL: smtp
+EMAIL_PORT: 587
+EMAIL_ID: eddykokok@gmail.com
+EMAIL_PASSWORD: phyrzmtjdfxhxpmg
+VERIFY_EMAIL_HOST: http://localhost:${SERVER_PORT}
