--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -9,3 +9,10 @@ MYSQL_DB: spcloud-db
 #SERVER
 SERVER_PORT: 8080
 ACTIVE_PROFILE: prod
+
+#EMAIL CONFIG
+EMAIL_HOST: smtp.gmail.com
+EMAIL_PORT: 587
+EMAIL_ID: <YOUR EMAIL ADDRESS>
+EMAIL_PASSWORD: <YOUR APP PASSWORD>
+VERIFY_EMAIL_HOST: http://localhost:${SERVER_PORT}
